3_year/Create_CPU_6_sem/.metadata/.plugins/org.eclipse.cdt.ui/lab2.build.log
20:40:29 **** Incremental Build of configuration Debug for project lab2 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:101:19: error: 'htim' undeclared (first use in this function)
  101 |    if (BTN_KEY && htim->Instance == TIM1){
      |                   ^~~~
../Core/Src/main.c:101:19: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/stm32f4xx_it.c: In function 'SysTick_Handler':
../Core/Src/stm32f4xx_it.c:191:8: error: 'Time1' undeclared (first use in this function)
  191 |   if(++Time1==100){
      |        ^~~~~
../Core/Src/stm32f4xx_it.c:191:8: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:38: Core/Src/stm32f4xx_it.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

20:40:30 Build Failed. 5 errors, 0 warnings. (took 910ms)

